Fix: wrong calculation for travel time, total charge, extra allow time, column positions and text alignment

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,8 +29,8 @@
   transform: translateX(100%);
 }
 
-.htDimmed{
-    text-align: left ;
+.htNumeric {
+    text-align: left !important;
 }
 
 .invalid-time {
